# MathStat

./: CMakeLists.txt
App/: CMakeLists.txt  CMakeLists.txt~  MathStat.cpp  MathStat.h  Sample.cpp  Sample.h  main.cpp
Core/: CMakeLists.txt  CMakeLists.txt~  CoreData.cpp  CoreData.h  Number.cpp  Number.h  Separatrices.cpp  Separatrices.h  StatClass.cpp  StatClass.h
Core/Parser/: CMakeLists.txt  Parser.cpp  Parser.h
Graphics/: CMakeLists.txt  Histogram.cpp  Histogram.h
Guis/: CMakeLists.txt  CMakeLists.txt~  FixDialog.cpp  FixDialog.h  ParserGui.cpp  ParserGui.h
Models/: CMakeLists.txt  SampleSpaceModel.cpp  SampleSpaceModel.h  StatClassModel.cpp  StatClassModel.h  StatisticsModel.cpp  StatisticsModel.h
Views/: CMakeLists.txt  SampleSpaceView.cpp  SampleSpaceView.h  StatClassView.cpp  StatClassView.h  StatisticsView.cpp  StatisticsView.h
files/: SampleSpace.data  teste.data
mathstatIcon/: icon.svgz
uml/: MathStat.xmi  mathStatUML.xmi
